GVariant: Don't use pyg_boxed_new as GVariant isn't a PyGBoxed but a PyGIStruct.

This only worked because they share the same struct layout.
This adds a new constructor for creating a new PyGIStruct instance from GType.

https://bugzilla.gnome.org/show_bug.cgi?id=751956